--- a/src/main/resources/templates/selector.html
+++ b/src/main/resources/templates/selector.html
@@ -4,18 +4,25 @@
 </head>
 <script>
     // JavaScript
-    function funcDownloads(selectItem, selectItems) {
-        var sel = document.getElementById("multiSelect"); 
+    function funcDownloads(path) {
+        var selected = false;
 
-        // 入力チェック
-        var count = 0;
-        for (var i=1; i< sel.length; i++) {
-            if (sel[i].selected) {
-                count++;
+        // フォームを取得
+        var targetForm = document.getElementById("multiForm"); 
+        var targetElement = document.getElementById("multiSelect"); 
+        if (!targetElement) {
+            return false;
+        }
+
+        for (var i=1; i< targetElement.length; i++) {
+            if (targetElement[i].selected == true) {
+                selected = true;
+                break;
             }
         }
 
-        if (count <= 0) {
+        // 入力チェック
+        if (!selected) {
             // エラーダイアログ
             var message = "ダウンロードファイルを選択してください";
             alert(message);
@@ -23,26 +30,21 @@
         }
         else {
             // ダウンロード開始
-            document.multiselect.submit();
+            targetForm.action=path;
+            targetForm.method="post";
+            targetForm.submit();
         }
     }
 </script>
 <body>
     <h1 th:text="${title}">Dummy Title</h1>
-    <form role="form" action="/downloads" th:action="@{/downloads}" th:object="${selectForm}" method="post">
-        <select id="singleSelect" name="selectedItem">
-            <option value="" th:text="${selectMessage}">---</option>
-            <option th:each="item : ${selectItems}" th:value="${item.key}" th:text="${item.value}" th:selected="${item.key} == *{selectedItem}">singleSelect</option>
-        </select>
-        <button type="submit" name="file" class="btn btn-default" th:text="${downloadButton}">confirm</button>
-    </form>
-    <form role="form" action="/downloads" th:action="@{/downloads}" th:object="${selectForm}" method="post" th:onsubmit="|return funcDownloads('__${selectMessage}__','__${downloadButton}__')|">
+    <form id="multiForm" role="form" th:object="${selectForm}" method="post">
         <select id="multiSelect" name="selectedItems" multiple="multiple" size="6">
             <option value="" th:text="${selectMessage}">---</option>
             <option th:each="item : ${selectItems}" th:value="${item.key}" th:text="${item.value}" th:selected="${item.key} == *{selectedItem}">multiSelect</option>
         </select>
-        <input type="submit" value="一括ダウンロード" name="zip" />
-        <input type="submit" value="個別ダウンロード" name="file"  />
+        <button type="button" th:onclick="|funcDownloads('/downloadZip')|">一括ダウンロード(button)</button>
+        <button type="button" th:onclick="|funcDownloads('/downloadFile')|">個別ダウンロード(button)</button>
     </form>
 </body>
 </html>
